--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,9 +6,9 @@ layout: default
 </header>
 
 <span class="time">{{ page.date | date_to_string }}</span>
-{% if page.categories %}
-  <span class="categories">
-    &raquo; {% for category in page.categories %}<a href="/category/{{ category }}">{{ category }}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}
+{% if page.tags %}
+  <span class="tags">
+    &raquo; {% for tag in page.tags %}<a href="/tag/{{ tag }}">{{ tag }}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}
   </span>
 {% endif %}
 
@@ -19,8 +19,8 @@ layout: default
 {% assign hasSimilar = '' %}
   {% for post in site.posts  %}
     {% assign postHasSimilar = false %}
-      {% for tag in post.categories %}
-        {% for thisTag in page.categories %}
+      {% for tag in post.tags %}
+        {% for thisTag in page.tag %}
           {% if postHasSimilar == false and hasSimilar.size < 6 and post != page and tag == thisTag %}
             {% if hasSimilar.size == 0 %}
             <div class="panel-body">
@@ -29,8 +29,8 @@ layout: default
             {% endif %}
                 <li class="relatedPost">
                   <a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
-                  {% if post.categories %}
-                    (Categories: {% for category in post.categories %}<a href="/category/{{ category }}">{{ category }}</a>{% if forloop.last == false %}, {% endif %}{% endfor %})
+                  {% if post.tags %}
+                    (Tags: {% for tag in post.tags %}<a href="/tag/{{ tag }}">{{ tag }}</a>{% if forloop.last == false %}, {% endif %}{% endfor %})
                   {% endif %}
                 </li>
           {% capture hasSimilar %}{{ hasSimilar }}*{% endcapture %}
