--- a/_layouts/posts_by_tag.html
+++ b/_layouts/posts_by_tag.html
@@ -2,25 +2,25 @@
 layout: default
 ---
 <header class="post-header">
-  <h1 class="post-title">Articles by category: {{ page.categories }}</h1>
+  <h1 class="post-title">Articles by tag: {{ page.tag }}</h1>
 </header>
 
 <div class="post-content">
   <hr />
-  {% for category in site.categories %}
-    {% capture category_slug %}{{ category | first }}{% endcapture %}
-    {% for c_slug in category_slug %}
-      {% if c_slug == page.categories %}
-        <button class="btn btn-sm btn-default active btn-tags">{{ c_slug }}</button>
+  {% for tag in site.tags %}
+    {% capture tag_slug %}{{ tag | first }}{% endcapture %}
+    {% for t_slug in tag_slug %}
+      {% if t_slug == page.tags %}
+        <button class="btn btn-sm btn-default active btn-tags">{{ t_slug }}</button>
       {% else %}
-        <a href="/category/{{ c_slug }}" class="btn btn-sm btn-default btn-tags">{{ c_slug }}</a>
+        <a href="/tag/{{ t_slug }}" class="btn btn-sm btn-default btn-tags">{{ t_slug }}</a>
       {% endif %}
     {% endfor %}
   {% endfor %}
 
   <hr />
-  {% if site.categories[page.categories] %}
-    {% for post in site.categories[page.categories] %}
+  {% if site.tags[page.tags] %}
+    {% for post in site.tags[page.tags] %}
       {% capture post_year %}{{ post.date | date: '%Y' }}{% endcapture %}
       {% if forloop.first %}
           <h4>{{ post_year }}</h4>
@@ -29,7 +29,7 @@ layout: default
 
       {% if forloop.first == false %}
         {% assign previous_index = forloop.index0 | minus: 1 %}
-        {% capture previous_post_year %}{{ site.categories[page.categories][previous_index].date | date: '%Y' }}{% endcapture %}
+        {% capture previous_post_year %}{{ site.tags[page.tags][previous_index].date | date: '%Y' }}{% endcapture %}
         {% if post_year != previous_post_year %}
           </div>
           <h4>{{ post_year }}</h4>
@@ -44,6 +44,6 @@ layout: default
       {% endif %}
     {% endfor %}
   {% else %}
-    <p>There are no posts in this categories.</p>
+    <p>There are no posts in this tag</p>
   {% endif %}
 </div>
