--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12,7 +12,7 @@ hr {
   border-top: 1px solid #F7F1F1;
   border-bottom: 1px solid #fff;
 }
-span.time, span.categories {
+span.time, span.tags {
   color: #ADADAD;
   margin-bottom: 5px;
   font-size: 11px;
