--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -129,8 +129,8 @@
             <ul class="search__results" id="js-search__results"></ul>
           </div>
           <hr />
+          <h3>Navigation</h3>
           <ul class="sidebar-nav">
-            <strong>Navigation</strong>
             <li><a href="/">Home</a></li>
             {% for i in site.urls %}
               <li><a class="about" href="{{ i.url }}">{{ i.text }}</a></li>
