Redesign recent posts list

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -99,6 +99,11 @@ footer {
   padding-bottom: 10px;
 }
 
+.posts {
+  list-style-type: none;
+  padding: 0;
+}
+
 div.post-content .btn-tags {
   margin-bottom: 3px;
 }
