--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,12 +5,14 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
 </header>
 
-<span class="time">{{ page.date | date_to_string }}</span>
-{% if page.tags %}
-  <span class="tags">
-    &raquo; {% for tag in page.tags %}<a href="/tag/{{ tag }}">{{ tag }}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}
-  </span>
-{% endif %}
+<div class="post-meta">
+  <span class="time">{{ page.date | date_to_string }}</span>
+  {% if page.tags %}
+    <span class="tags">
+      &raquo; {% for tag in page.tags %}<a href="/tag/{{ tag }}">{{ tag }}</a>{% if forloop.last == false %}, {% endif %}{% endfor %}
+    </span>
+  {% endif %}
+</div>
 
 <div class="content">
   <div class="post">{{ content }}</div>
