--- a/_layouts/posts_by_tag.html
+++ b/_layouts/posts_by_tag.html
@@ -37,7 +37,7 @@ layout: default
         {% endif %}
       {% endif %}
         <ul class="posts">
-          <li><a href="{{ post.url }}">{{ post.title }}</a> &raquo; <i><span>{{ post.date | date_to_string }}</span></i></li>
+          <li>{{ post.date | date: "%d/%m/%y" }} &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
         </ul>
       {% if forloop.last %}
         </div>
