Add author image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -112,6 +112,7 @@
       <div class="col-sm-3">
         <div class="fixed-condition">
           <h1 class="author-name"><a href="/">{{ site.author-tagline }}</a></h1>
+          <img src="/static/img/headshot.jpg" alt="Headshot image of Kris Carta" class="author-image" />
           {% if site.about %}
             <div class="profile-about">
               {{ site.about }}
