Add basic, unstyled comments to site

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -1,6 +1,8 @@
 ---
 ---
 
+@import "comment-styles";
+
 $text-primary-font: "Roboto Condensed", Arial, sans-serif;
 $text-post-font: Georgia, "Times New Roman", Times, serif;
 $text-code-font: Menlo, Monaco, Consolas, "Courier New", monospace;
