--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -9,6 +9,7 @@ $text-code-font: Menlo, Monaco, Consolas, "Courier New", monospace;
 
 $text-primary-size: 20px;
 $text-secondary-size: 16px;
+$text-footnote-size: 14px;
 $text-navigation-size: 18px;
 $text-post-size: 18px;
 $text-top-header-size: 32px;
@@ -19,6 +20,8 @@ $text-header-color: #555;
 $text-detail-color: #777;
 $link-color: #2997d8;
 $link-hover-color: #253b80;
+
+$line-color: #999;
 
 body {
   font-family: $text-primary-font;
@@ -37,7 +40,7 @@ hr {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
-  border-top: 1px solid #f7f1f1;
+  border-top: 1px solid $line-color;
   border-bottom: 1px solid #fff;
 }
 
@@ -129,6 +132,15 @@ footer {
   h2,
   h3 {
     margin-bottom: 15px;
+  }
+
+  .footnotes {
+    margin-top: 40px;
+    padding-top: 10px;
+    border-top: 1px solid $line-color;
+    p, li {
+      font-size: $text-footnote-size;
+    }
   }
 }
 
